<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <Button
        android:id="@+id/bt_konfirmasiedit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_button1"
        android:text="@string/bt_konfirmasiedit"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/edt_editalamat"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_editalamat"
        app:layout_constraintTop_toBottomOf="@+id/edt_editalamat" />

    <EditText
        android:id="@+id/edt_editalamat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/edt_editalamat"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_editnama"
        app:layout_constraintTop_toBottomOf="@+id/edt_editnotelp" />

    <TextView
        android:id="@+id/tv_editalamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/tv_editalamat"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/edt_editalamat"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edt_editnotelp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/hint_editnotelp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_editnama"
        app:layout_constraintTop_toBottomOf="@+id/edt_editemail" />

    <TextView
        android:id="@+id/tv_editnotelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/tv_editnotelp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/edt_editnotelp"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edt_editemail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/hint_edtemail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_editnama"
        app:layout_constraintTop_toBottomOf="@+id/edt_editname" />

    <TextView
        android:id="@+id/tv_editemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/tv_editemail"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/edt_editemail"
        app:layout_constraintStart_toStartOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView2"
        android:layout_width="138dp"
        android:layout_height="130dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_editprofile" />

    <TextView
        android:id="@+id/tv_editprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="124dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/tv_edtProfile"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="74dp"
        android:layout_height="61dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="60dp"
        android:clickable="true"
        android:focusable="true"
        android:foregroundTint="#000000"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toTopOf="@+id/tv_editprofile"
        app:layout_constraintEnd_toStartOf="@+id/tv_editprofile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/tv_editnama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/tv_editname"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/edt_editname"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edt_editname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_edtname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_editnama"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
</androidx.constraintlayout.widget.ConstraintLayout>