<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/tv_userSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/usertext"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ic_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintStart_toStartOf="@id/tv_userSettings"
        app:layout_constraintTop_toBottomOf="@id/tv_userSettings" />

    <TextView
        android:id="@+id/tv_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/edit_profile"
        android:textColor="@color/black"
        android:clickable="true"
        app:layout_constraintStart_toEndOf="@id/ic_profile"
        app:layout_constraintTop_toTopOf="@id/ic_profile"
        android:focusable="true" />

    <ImageView
        android:id="@+id/ic_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:src="@drawable/ic_baseline_lock_24"
        app:layout_constraintStart_toStartOf="@id/ic_profile"
        app:layout_constraintTop_toBottomOf="@id/ic_profile" />

    <TextView
        android:id="@+id/tv_edit_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/ubah_pin"
        android:textColor="@color/black"
        android:clickable="true"
        app:layout_constraintStart_toEndOf="@id/ic_profile"
        app:layout_constraintTop_toTopOf="@id/ic_pin"
        android:focusable="true" />

    <TextView
        android:id="@+id/tv_general"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/general_text"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tv_userSettings"
        app:layout_constraintTop_toBottomOf="@id/ic_pin"/>

    <ImageView
        android:id="@+id/ic_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:src="@drawable/ic_baseline_language_24"
        app:layout_constraintStart_toStartOf="@id/tv_general"
        app:layout_constraintTop_toBottomOf="@id/tv_general" />

    <TextView
        android:id="@+id/tv_bahasa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/bahasa"
        android:textColor="@color/black"
        android:clickable="true"
        app:layout_constraintStart_toEndOf="@id/ic_language"
        app:layout_constraintTop_toTopOf="@id/ic_language"
        android:focusable="true" />

    <ImageView
        android:id="@+id/ic_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:src="@drawable/ic_baseline_brightness_4_24"
        app:layout_constraintStart_toStartOf="@id/tv_general"
        app:layout_constraintTop_toBottomOf="@id/ic_language" />

    <TextView
        android:id="@+id/tv_tema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/tema"
        android:textColor="@color/black"
        android:clickable="true"
        app:layout_constraintStart_toEndOf="@id/ic_language"
        app:layout_constraintTop_toTopOf="@id/ic_theme"
        android:focusable="true" />

    <ImageView
        android:id="@+id/ic_kode_referal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:src="@drawable/ic_baseline_people_24"
        app:layout_constraintStart_toStartOf="@id/tv_general"
        app:layout_constraintTop_toBottomOf="@id/ic_theme" />

    <TextView
        android:id="@+id/tv_kode_referal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/kode_refferal"
        android:textColor="@color/black"
        android:clickable="true"
        app:layout_constraintStart_toEndOf="@id/ic_language"
        app:layout_constraintTop_toTopOf="@id/ic_kode_referal"
        android:focusable="true" />

    <ImageView
        android:id="@+id/ic_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:src="@drawable/ic_baseline_help_24"
        app:layout_constraintStart_toStartOf="@id/tv_general"
        app:layout_constraintTop_toBottomOf="@id/ic_kode_referal" />

    <TextView
        android:id="@+id/tv_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/tentang_aplikasi"
        android:textColor="@color/black"
        android:clickable="true"
        app:layout_constraintStart_toEndOf="@id/ic_language"
        app:layout_constraintTop_toTopOf="@id/ic_about"
        android:focusable="true" />

    <ImageView
        android:id="@+id/ic_credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:src="@drawable/ic_baseline_info_24"
        app:layout_constraintStart_toStartOf="@id/tv_general"
        app:layout_constraintTop_toBottomOf="@id/ic_about" />

    <TextView
        android:id="@+id/tv_credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/kredit"
        android:textColor="@color/black"
        android:clickable="true"
        app:layout_constraintStart_toEndOf="@id/ic_language"
        app:layout_constraintTop_toTopOf="@id/ic_credit"
        android:focusable="true" />

    <ImageView
        android:id="@+id/ic_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintStart_toStartOf="@id/tv_general"
        app:layout_constraintTop_toBottomOf="@id/ic_credit" />

    <TextView
        android:id="@+id/tv_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/hapus_akun"
        android:textColor="@color/red"
        android:clickable="true"
        app:layout_constraintStart_toEndOf="@id/ic_language"
        app:layout_constraintTop_toTopOf="@id/ic_delete"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>