<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="295dp"
        android:layout_height="279dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/replasc_logo_vert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/custom_edt1"
        android:drawableLeft="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:textColor="@color/black"
        android:textColorHint="@color/Grove4"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_edt1"
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:textColor="@color/black"
        android:textColorHint="@color/Grove4"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_email"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edt_email"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />


    <!--    <TextView-->
<!--        android:id="@+id/tv_register"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:text="@string/tv_register"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/logo"-->
<!--        app:layout_constraintHorizontal_bias="0.506"-->
<!--        app:layout_constraintStart_toStartOf="@+id/logo"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/bt_login"-->
<!--        app:layout_constraintVertical_bias="0.111"/>-->
<!--        android:onClick="intentRegister"-->
    <Button
        android:id="@+id/bt_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/custom_button1"
        android:text="@string/bt_login"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

<!--    <TextView-->
<!--        android:id="@+id/tv_register"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:text="@string/tv_register"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/logo"-->
<!--        app:layout_constraintHorizontal_bias="0.506"-->
<!--        app:layout_constraintStart_toStartOf="@+id/logo"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/bt_login"-->
<!--        app:layout_constraintVertical_bias="0.111"/>-->
<!--        android:onClick="intentRegister"-->
    <Button
        android:id="@+id/bt_googlesignin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_edt1"
        android:text="@string/bt_googlesignin"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/g_logo"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/bt_login" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="intentRegister"
        android:textColor="@color/Grove2"
        android:text="@string/tv_register"
        app:layout_constraintEnd_toEndOf="@+id/bt_googlesignin"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/bt_googlesignin"
        app:layout_constraintTop_toBottomOf="@+id/bt_googlesignin" />

    <ProgressBar
        android:id="@+id/pb_login"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/edt_email"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo" />
  
</androidx.constraintlayout.widget.ConstraintLayout>